[project]
name = "randao-oracle"
version = "0.1.0"
description = "Trustless randomness oracle for Ethereum"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "moccasin>=0.4.2",
    "web3>=7.12.1",
]

[tool.moccasin.project]
src = "contracts"
dependencies = [
    "pcaversaccio/snekmate@0.1.2"
]

[tool.moccasin.networks.contracts.RaffleFactory]
deployer_script = "script/deploy.py"

[tool.moccasin.networks.chiado]
url = "https://rpc.chiadochain.net"
prompt_live = false
