[project]
name = "randao-raffle"
version = "0.1.0"
description = "Trustless raffle on Ethereum"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "moccasin>=0.4.2",
    "web3>=7.12.1",
]

[tool.moccasin.project]
src = "contracts"
dependencies = []

[tool.moccasin.networks.contracts.RaffleFactory]
deployer_script = "script/deploy.py"

[tool.moccasin.networks.chiado]
url = "https://rpc.chiadochain.net"
prompt_live = false

[tool.moccasin.networks.sepolia]
url = "https://sepolia.drpc.org"
prompt_live = false

[tool.moccasin.networks.gnosis]
url = "https://rpc.gnosischain.com"

[tool.moccasin.networks.anvil]
url = "http://localhost:8545"
prompt_live = false
save_to_db = false
